simple refactor - part 1